--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
-  <link rel="stylesheet" href="inter.css">
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
@@ -13,21 +12,20 @@
   <header class="header">
     <img src="./images/logo.svg" alt="лого" class="header__logo">
     <div class="header__lang-link">
-      <a href="#" class="header__lang-link_active header__lang-link_ru">Ru</a>
-      <a href="#" class="header__lang-link_active header__lang-link_en">En</a>
+      <a href="#" class="header__lang_active header__lang">Ru</a>
+      <a href="#" class="header__lang">En</a>
     </div>
   </header>
 
   <main class="conteiner">
-    <div class="lead">
+    <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img src="./images/lead-polka.jpg" alt="михаил" class="lead__image">
       <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
-    </div>
+    </section>
 
     <section class="intro">
-      <div class="title">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране.
@@ -37,28 +35,29 @@
           Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою
           «Ладу» и проехала 20 тысяч километров по родной стране.
           Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-        <p class="intro__list">Часовых поясов<span class="intro__list_numbers">11</span></p>
-        <p class="intro__list">Объектов природного наследия ЮНЕСКО<span class="intro__list_numbers">12</span></p>
-        <p class="intro__list">Объектов культурного наследия ЮНЕСКО<span class="intro__list_numbers">16</span></p>
-        <p class="intro__list">Природных заповедников<span class="intro__list_numbers">105</span></p>
-        <p class="intro__list">Аэропортов<span class="intro__list_numbers">241</span></p>
-      </div>
+      <ul class="intro__list">
+        <li>Часовых поясов<span class="intro__numbers">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО<span class="intro__numbers">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО<span class="intro__numbers">16</span></li>
+        <li>Природных заповедников<span class="intro__numbers">105</span></li>
+        <li>Аэропортов<span class="intro__numbers">241</span></li>
+      </ul>
     </section>
 
-      <div class="photo-grid">
-        <img src="./images/photo-grid/11.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/__item.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/1.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/2.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/3.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/4.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/5.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/6.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/7.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/8.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/9.png" alt="фото" class="grid__photo">
-        <img src="./images/photo-grid/10.png" alt="фото" class="grid__photo">
-      </div>
+      <section class="photo-grid">
+        <img src="./images/photo-grid/11.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/__item.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/1.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/2.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/3.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/4.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/5.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/6.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/7.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/8.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/9.png" alt="фото" class="photo-grid__photo">
+        <img src="./images/photo-grid/10.png" alt="фото" class="photo-grid__photo">
+      </section>
 
     <section class="places">
       <div class='place'>
@@ -121,7 +120,7 @@
           <p class='place__url-heading'>URL</p>
           <a href='https://vk.com/baikalmile' class='place__link'>https://vk.com/baikalmile</a>
         </div>
-        <img src='./images/__image/Зимний Байкал.png' alt='Зимний Байкал' class='place__image'>
+        <img src='./images/__image/Байкал.png' alt='Зимний Байкал' class='place__image'>
         <div class='place__text'>
           <p class='place__paragraph'>Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно
@@ -156,24 +155,21 @@
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от
-          столицы до Байкала на электричках.</p>
-        <div class="cover__overlay"></div>
+            столицы до Байкала на электричках.</p>
       </a>
     </section>
-
+</main>
     <footer class="footer">
       <nav>
         <ul class="footer__row">
           <li><a href="https://yandex.ru/maps" target="_blank" class="footer__row-link">Карты</a></li>
           <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__row-link">Погода</a></li>
-          <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__row-link">Рассписание</a></li>
+          <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__row-link">Расписание</a></li>
           <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__row-link">Календарь</a></li>
           <li><a href="https://travel.yandex.ru" target="_blank" class="footer__row-link">Путешествия</a></li>
         </ul>
       </nav>
-      <div class="footer__authors">
         <p class="footer__author">&COPY; 2021. Дмитрий Силкин</p>
-      </div>
     </footer>
-  </main>
 </body>
+</html>
